--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                 <h2 class="mt-8">Rectangle</h2>
                 <h4 class="mb-5">Area(A)= W * I</h4>
                 <div class="flex gap-4 mb-8 mx-1">
-                 <input type="number" placeholder="W" class="w-6/12 pl-2"><span>cm</span>
-                 <input type="number" placeholder="I" class="w-6/12 pl-2"><span>cm</span>
+                 <input id="rectangle-inputW" type="number" placeholder="W" class="w-6/12 pl-2"><span>cm</span>
+                 <input id="rectangle-inputI" type="number" placeholder="I" class="w-6/12 pl-2"><span>cm</span>
                 </div>
                 <button id="rectangle-btn" class="bg-pink-400 w-full py-2 text-white font-semibold rounded-lg">Calculate</button>
              </div>
