--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@
     <title>Document</title>
 </head>
 <body>
-   <section class="my-20 lg:mx-20">
+    <header class="container mx-auto flex justify-between bg-slate-400 px-4 py-2 mb-6">
+       <div>
+        <h2 class="font-bold text-2xl ">Interactive</h2>
+        <h2 >Geometry Genius</h2>
+       </div>
+       
+       <button  class="font-bold text-2xl text-white bg-teal-500 px-4 py-1 rounded-lg">
+        <a href="blog.html">Blog</a>
+        </button>
+    </header>
+   <section class="container mx-auto">
     <div class="md:flex gap-4">
         <div class=" md:w-9/12  ">
          <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-4">
