--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="md:flex gap-4">
         <div class=" md:w-9/12  ">
          <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-4">
-            <div class=" bg-white shadow border-2 grid justify-items-center mx-auto py-14 px-8">
+            <div id="triangle-bg" class=" bg-white shadow border-2 grid justify-items-center mx-auto py-14 px-8">
                <div class="mx-4">
                 <img src="images/triangle.png" alt="" srcset="">
                </div>
@@ -34,7 +34,7 @@
                </div>
                <button id="triangle-btn" class="bg-pink-400 w-full py-2 text-white font-semibold rounded-lg">Calculate</button>
             </div>
-            <div class="bg-white shadow border-2 grid justify-items-center mx-auto  py-14 px-8">
+            <div id="rectangle-bg" class="bg-white shadow border-2 grid justify-items-center mx-auto  py-14 px-8">
                 <div class="mx-4">
                  <img src="images/rectangle.png" alt="" srcset="">
                 </div>
@@ -46,7 +46,7 @@
                 </div>
                 <button id="rectangle-btn" class="bg-pink-400 w-full py-2 text-white font-semibold rounded-lg">Calculate</button>
              </div>
-             <div class="bg-white shadow border-2 grid justify-items-center mx-auto px-8 py-14">
+             <div  id="parallelogram-bg" class="bg-white shadow border-2 grid justify-items-center mx-auto px-8 py-14">
                 <div class="mx-4">
                  <img src="images/parallelogram.png" alt="" srcset="">
                 </div>
@@ -58,7 +58,7 @@
                 </div>
                 <button id="parallelogram-btn" class="bg-pink-400 w-full py-2 text-white font-semibold rounded-lg">Calculate</button>
              </div>
-             <div class="bg-white shadow border-2 grid justify-items-center mx-auto px-8 py-14">
+             <div id="rhombus-bg" class="bg-white shadow border-2 grid justify-items-center mx-auto px-8 py-14">
                 <div class="mx-4">
                  <img src="images/rhombus.png" alt="" srcset="">
                 </div>
@@ -70,7 +70,7 @@
                 </div>
                 <button id="rhombos-btn" class="bg-pink-400 w-full py-2 text-white font-semibold rounded-lg">Calculate</button>
              </div>
-             <div class="bg-white shadow border-2grid justify-items-center mx-auto px-8 py-14">
+             <div id="pentagon-bg" class="bg-white shadow border-2grid justify-items-center mx-auto px-8 py-14">
                 <div class="mx-4">
                  <img src="images/pentagon.png" alt="" srcset="">
                 </div>
@@ -82,7 +82,7 @@
                 </div>
                 <button id="pentagon-btn" class="bg-pink-400 w-full py-2 text-white font-semibold rounded-lg">Calculate</button>
              </div>
-             <div class="bg-white shadow border-2 grid justify-items-center mx-auto px-8 py-14">
+             <div id="ellipse-bg" class="bg-white shadow border-2 grid justify-items-center mx-auto px-8 py-14">
                 <div class="mx-4">
                  <img src="images/ellipse.png" alt="" srcset="">
                 </div>
@@ -99,7 +99,7 @@
         </div>
     <div class="md:w-3/12  ">
         
-        <div class="bg-white shadow border-2 grid justify-items-center px-5 py-14"> 
+        <div id="cal-bg" class="bg-white shadow border-2 grid justify-items-center px-5 py-14"> 
             <h2 class="font-bold underline">Area Calculation</h2>
             <div  id="table-container">
                 <tbody class="flex">
