--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
                 <h2 class="mt-8">Rhombus</h2>
                 <h4 class="mb-5">Area(A)= .5 * d1 * d2</h4>
                 <div class="flex gap-4 mb-8 mx-1">
-                 <input id="rhombos-inputD1" type="number" placeholder="d" class="w-6/12 pl-2 bg-violet-100"><span>cm</span>
-                 <input id="rhombos-inputD2" type="number" placeholder="d" class="w-6/12 pl-2 bg-violet-100"><span>cm</span>
+                 <input id="rhombos-inputD1" type="number" placeholder="d1" class="w-6/12 pl-2 bg-violet-100"><span>cm</span>
+                 <input id="rhombos-inputD2" type="number" placeholder="d2" class="w-6/12 pl-2 bg-violet-100"><span>cm</span>
                 </div>
                 <button id="rhombos-btn" class="bg-pink-400 w-full py-2 text-white font-semibold rounded-lg">Calculate</button>
              </div>
@@ -87,7 +87,7 @@
                  <img src="images/ellipse.png" alt="" srcset="">
                 </div>
                 <h2 class="mt-8">Ellipse</h2>
-                <h4 class="mb-5">Area(A)= ab</h4>
+                <h4 class="mb-5">Area(A)= 𝛑ab</h4>
                 <div class="flex gap-4 mb-8 mx-1">
                  <input id="ellipse-inputA" type="number" placeholder="a" class="w-6/12 pl-2 bg-violet-100"><span>cm</span>
                  <input id="ellipse-inputB" type="number" placeholder="b" class="w-6/12 pl-2 bg-violet-100"><span>cm</span>
